# notebook

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  project-spec.md  temp_openapi.json
.claude/: settings.local.json
.claude/commands/: create-pr.md  new-feature-doc.md  retro.md  smart-commit.md  update-changelog.md  update-docs.md  update-status.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20251227_1119_f87cd8d27053_initial_migration.py  20251227_1200_add_sources_table.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/endpoints/: admin.py  auth.py  chat.py  llm.py  notes.py  sources.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  note.py  source.py  user.py
backend/app/schemas/: __init__.py  admin.py  auth.py  note.py  source.py  user.py
backend/app/services/: __init__.py  chat.py  embeddings.py  llm.py  podcast.py  slides.py  sources.py  summary.py  tts.py  youtube.py
deploy/: .env.example  docker-compose.yml  serve.json
docs/: architecture.md  changelog.md  design-system.md  phase-1-strategy.md  project-status.md
docs/features/: .gitkeep
frontend/: .dockerignore  .env.example  Dockerfile  FEATURE_PLAN.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(app)/: layout.tsx  page.tsx
frontend/src/app/(app)/chat/: page.tsx
frontend/src/app/(app)/daily/: page.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/components/audio/: audio-generation-panel.tsx  audio-player.tsx  index.ts
frontend/src/components/command-palette/: command-palette.tsx
frontend/src/components/layout/: header.tsx  sidebar.tsx
frontend/src/components/notes/: empty-state.tsx  index.ts  note-editor.tsx  note-list.tsx
frontend/src/components/providers/: auth-provider.tsx  query-provider.tsx
frontend/src/components/settings/: settings-dialog.tsx
frontend/src/components/sources/: sources-panel.tsx
frontend/src/components/ui/: button.tsx  dialog.tsx  index.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/lib/hooks/: index.ts  use-auth.ts  use-keyboard-shortcuts.ts  use-notes-with-fallback.ts
frontend/src/lib/queries/: chat.ts  daily.ts  index.ts  llm.ts  notes.ts  query-client.ts  search.ts  sources.ts
frontend/src/lib/stores/: auth-store.ts  index.ts  notes-store.ts
scripts/: init-db.sql
(+7 files in other folders)
