[project]
name = "notebook-backend"
version = "0.1.0"
description = "AI-powered personal knowledge management backend"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Notebook" }]
keywords = ["notebook", "ai", "knowledge-management", "fastapi"]

dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",

    # Database
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "pgvector>=0.2.4",

    # AI/ML
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-community>=0.0.16",
    "openai>=1.10.0",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<5.0.0",  # Pin to 4.x for passlib compatibility
    "httpx>=0.26.0",

    # Validation
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.1.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "redis>=5.0.1",
    "aiofiles>=23.2.1",

    # Source Ingestion (PDF, Web Scraping, YouTube)
    "pymupdf>=1.23.0",  # PDF text extraction (faster than pypdf)
    "pypdf>=3.17.0",  # Fallback PDF extraction
    "beautifulsoup4>=4.12.0",  # HTML parsing for web scraping
    "lxml>=5.0.0",  # HTML parser backend
    "youtube-transcript-api>=0.6.0",  # YouTube transcript extraction

    # Audio Processing
    "pydub>=0.25.0",  # Audio manipulation for podcasts
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
